feat: Added user and company updateProfile functionality
