# src/routes/userRouters.ts
@@ -1,3 +1,4 @@
+import { updateUserprofile } from './../controllers/userController';
 import { Router } from "express";
 import { createUser, deleteUser, getAllUsers, getUserById, updateUser } from "../controllers/userController";
 import { validationMiddleware } from "../middlewares/validationMiddleware";
@@ -9,6 +10,7 @@ const userRouter=Router();
 userRouter.get("/users",checkRoleMiddleware(["manager"]),getAllUsers);
 userRouter.get("/users/:id",checkRoleMiddleware(["manager"]),getUserById);
 userRouter.post("/users", validationMiddleware({ type: "body", schema: addUserSchema }), createUser);
+userRouter.patch("/users/profile/:id", checkRoleMiddleware(["employee"]), updateUserprofile);
 userRouter.patch("/users/:id",checkRoleMiddleware(["manager"]), validationMiddleware({ type: "body", schema: updateUserSchema }), updateUser);
 userRouter.delete("/users/:id",checkRoleMiddleware(["manager"]),deleteUser);
 
