# src/types/updateProfile.ts
@@ -1,0 +1,19 @@
+export interface userUpdateProfileInterface {
+    profilePhoto?: string;
+    fullName?: string;
+    email?: string;
+    phoneNumber?: string;
+    
+    
+}
+
+export interface companyUpdateProfileInterface {
+  companyLogo?: string;
+  companyName?: string;
+  companyEmail?: string;
+  companyContact?: string;
+  district?: string;
+  province?: string;
+  sector?: string;
+  
+}
